# macro-source

./: .gitignore  Makefile  Makefile.am  ans001.mc  ans002.mc  ans004.mc  build.xml  configure.ac  macsrc.1.in  macsrc.msrc  msrc-prime  tst001.mc  tst002.mc  tst003.mc  tst004.mc
resources/: HelpText.txt
src/org.rwtodd.macsrc/: module-info.java
tests/: ans003.txt  ans004.txt  ans005.txt  ans006.txt  ans007.txt  compare.sh  tst001.msrc  tst002.msrc  tst003.msrc  tst004.msrc  tst005.msrc  tst006.msrc  tst007.msrc  tst009.msrc  tst010.msrc
